SCRUM-68: User database schema and CRUD rewrite